# ipn_sim

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  plan.md
.github/workflows/: main.yaml
graph_layout/: Cargo.toml
graph_layout/examples/interactive_web_app/: Cargo.toml  package-lock.json  package.json  style.scss  webpack.config.js
graph_layout/examples/interactive_web_app/js/: main.js
graph_layout/examples/interactive_web_app/src/: lib.rs
graph_layout/src/: graph_layout.rs  lib.rs  vertex.rs
ipn_sim_bin/: Cargo.toml
ipn_sim_bin/example_configs/: grid.ron
ipn_sim_bin/src/: config_parser.rs  format_time.rs  main.rs  router_log_report.rs
ipn_sim_lib/: Cargo.toml
ipn_sim_lib/src/: binary_serde.rs  body.rs  event.rs  ipn_sim.rs  lib.rs  message_buffer.rs  message_destination.rs  movement.rs  node.rs  report.rs  router.rs  router_link.rs  tick_result.rs  utils.rs
ipn_sim_lib/src/events/: awake_router_event.rs  create_message_event.rs  mod.rs  receive_data_event.rs  router_event.rs  transmit_end_event.rs  transmit_start_event.rs
ipn_sim_lib/src/ipn_sim/: ipn_sim.rs  ipn_sim_builder.rs  mod.rs  tick_result.rs
ipn_sim_lib/src/movements/: mod.rs  orbital_movement.rs  path_movement.rs  static_movement.rs
ipn_sim_lib/src/node/: message_buffer.rs  mod.rs  node.rs  node_builder.rs
ipn_sim_lib/src/routers/: mod.rs  test_router.rs
ipn_sim_lib/src/routers/epidemic/: epidemic.rs  flavour.rs  message.rs  mod.rs  packet.rs
ipn_sim_lib/src/routers/epidemic/flavours/: ack.rs  mod.rs  vanilla.rs
ipn_sim_lib/src/routers/epidemic_2/: epidemic.rs  message.rs  mod.rs  packet.rs
ipn_sim_lib/src/routers/source_spray_and_wait/: message.rs  mod.rs  packet.rs  source_spray_and_wait.rs
ipn_sim_lib/src/routers/source_spray_and_wait_2/: mod.rs  packet.rs  source_spray_and_wait_2.rs
ipn_sim_lib/src/routers/spray_and_wait/: flavour.rs  message.rs  mod.rs  packet.rs  spray_and_wait.rs
ipn_sim_lib/src/routers/spray_and_wait/flavours/: binary.rs  mod.rs  source.rs
ipn_sim_lib/src/schedule/: mod.rs  new.txt  old.txt  schedule.rs  time_slot.rs
ipn_sim_lib/src/transceiver/: mod.rs  transceive_guard.rs  transceiver.rs
ipn_sim_lib/src/transceiver/transceive_guards/: mod.rs  simple.rs  simple_transceive_guard.rs
ipn_sim_lib/tests/: event_processing.rs  positions_test.rs  reporting.rs  runs.rs  simple_run.rs
ipn_sim_profiler/: Cargo.toml  past_profiles.txt
ipn_sim_profiler/src/: factories.rs  main.rs  profiler.rs  profiler_report.rs
ipn_sim_reports/: Cargo.toml
ipn_sim_reports/src/: graph.rs  graph_builder.rs  graph_report.rs  lib.rs  time_series_report.rs  utils.rs  value_logger.rs
ipn_sim_reports/src/graph_builders/: message_buffer_occupancy.rs  message_flight_time.rs  message_states.rs  mod.rs  send_deliver_ratio.rs
ipn_sim_reports/src/reports/: message_buffer_occupancy.rs  message_flight_time.rs  message_states.rs  messages.rs  mod.rs  node_positions.rs  send_deliver_ratio.rs  single_message_graph.rs
ipn_sim_reports/src/utils/: format_time.rs  mod.rs  paths.rs
ipn_sim_web_app/: Cargo.toml  package-lock.json  package.json  style.scss  tsconfig.json  webpack.config.js
ipn_sim_web_app/js/: main.js
ipn_sim_web_app/src/: bindings.rs  factories.rs  lib.rs  movement_path.rs  ts_append.rs  utils.rs
ipn_sim_web_app/src/components/: app.rs  data.rs  events_tab.rs  graph.rs  message_graph.rs  messages_tab.rs  mod.rs  nodes_tab.rs  router_log_tab.rs  sidebar.rs  stats_tab.rs  tab_switcher.rs
ipn_sim_web_app/src/components/data/: mod.rs  parsed_byte_sections.rs
ipn_sim_web_app/src/event_html/: event_html.rs  mod.rs  router_event.rs
ipn_sim_web_app/src/sim_wrapper/: interval_event.rs  log.rs  mod.rs  setup_data.rs  sim_wrapper.rs  tick_data.rs  value_logger.rs  web_app_report.rs
ipn_sim_web_app/src/utils/: format_time.rs  mod.rs
ipn_sim_web_app/ts/: bindings.ts  entity.ts  nodeMarker.ts  renderer.ts  utils.ts
ipn_sim_web_app/ts/renderer/: component.ts  index.ts
ipn_sim_web_app/ts/renderer/components/bodyMarkersComponent/: bodyMarker.ts  bodyMesh.ts  index.ts
ipn_sim_web_app/ts/renderer/components/connectionMarkersComponent/: connectionMarker.ts  index.ts
ipn_sim_web_app/ts/renderer/components/nodeMarkersComponent/: index.ts  nodeMarker.ts  splash.ts
router-zoo/: 235.app.js  509.app.js  572.app.js  app.js  app.wasm  index.html
router_zoo/: Cargo.toml  package-lock.json  package.json  style.scss  webpack.config.js
router_zoo/js/: main.js
router_zoo/src/: lib.rs  scenario.rs  scenario_grid_wrapper.rs
router_zoo/src/components/: app.rs  experiment_grid.rs  mod.rs  nav_menu.rs  router_page.rs  router_params_editor.rs  scenario_grid.rs
router_zoo/src/router_details/: ack_epidemic.rs  mod.rs  vanilla_epidemic.rs
web-app/: 1.app.js  2.app.js  235.app.js  3.app.js  4.app.js  509.app.js  572.app.js  898.app.js  app.js  app.wasm  index.html
