[package]
name = "ipn_sim_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.17.0", features = ["serde"] }
bit-vec = { version = "0.6.3", features = ["serde"] }
dyn-clonable = "0.9.0"
downcast-rs = "1.2.0"
collision = "0.20.1"
rand = { version = "0.8.4"}
getrandom = { version = "0.2", features = ["js"] }
serde = "1.0.126"
bincode = "1.3.3"
rustc-hash = "1.1.0"

typescript-definitions = { git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"] }
wasm-bindgen = "0.2.74"

[features]
wasm = ["serde_derive", "ts_defs"]
serde_derive = []
ts_defs = []