[package]
name = "ipn_sim_profiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipn_sim_lib = { path = '../ipn_sim_lib' }
ipn_sim_reports = { path = '../ipn_sim_reports' }

rand = { version = "0.8.4" }