[package]
name = "ipn_sim_reports"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipn_sim_lib = { path = '../ipn_sim_lib' }

yew = "0.18.0"
num-traits = "0.2.14"
itertools = "0.10.1"
axis-ticks = "0.1.0"
upcast = "0.1.0"