[package]
name = "interactive_web_app"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
graph_layout = { path = '../..' }

yew = "0.18.0"
wasm-bindgen = "0.2.75"
web-sys = { version = "0.3.52", features = ["Element", "MouseEvent", "TouchEvent", "TouchList", "Touch"] }

itertools = "0.10.1"
petgraph = "0.6.0"